--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>CALCULATRICE</h1>
+        <h1>MA CALCULATRICE</h1>
     </header>
     <section class="section1">
         <div class="div1"> 
@@ -23,9 +23,9 @@
                 </label><br>
                 <input type="number" id="sideSquare" /><br> 
                 <!-- input sert à inserer l'encadrer et lui donner un type d'entréé, string,number... -->
-                <button type="submit"onclick="perimeterButtonSquare()">Perimètre</button><br>
-
-                <button onclick="airButtonSquare()">Air</button><br>
+                
+                <button class="bouton" onclick="perimeterButtonSquare()">Perimètre</button><br>
+                <button class="bouton" onclick="airButtonSquare()">Air</button><br>
                 <p id="resultatSquare"></p>
                 <p id="resultatSquare1"></p>
 
@@ -57,8 +57,8 @@
                 </label><br>
                 <input type="number" id="hauteurTriangle" /><br>
                 
-                <button onclick="perimeterButtonTriangle()">Perimètre</button><br>
-                <button onclick="airButtonTriangle()"> Air</button>
+                <button class="bouton" onclick="perimeterButtonTriangle()">Perimètre</button><br>
+                <button class="bouton" onclick="airButtonTriangle()"> Air</button><br>
                 <p id="resultatTriangle1"></p>
                 <p id="resultatTriangle2"></p>
 
